--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -11,3 +11,35 @@
   display: flex;
   justify-content: space-between;
 }
+
+.nav .nav__list-link {
+  position: relative;
+}
+
+.nav .nav__badge {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 10px;
+  color: white;
+  background-color: #dc5d46;
+  width: 18px;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+@keyframes showNavBar {
+  from {
+    transform: translateY(80px);
+  }
+  to {
+    transform: none;
+  }
+}
+.nav {
+  transform: translateY(80px);
+  animation: showNavBar 0.5s 0.5s ease-in-out forwards;
+}
